<resources>
    <string name="app_name">quiz</string>
    <string name="name_of_the_test">Test: Is it easy to manipulate you?</string>
    <string name="introduction">Life among people - an endless struggle for power. And the most powerful and cruel form of power is the ability to control someone else\'s opinion. All around us want this privilege: political technologists and marketers, bosses and even our close ones. Let\'s find out how independent you are from others.</string>
    <string name="question_1">Are you strongly depend on someone else\'s opinion? What do YOU think,</string>
    <string name="answer1_1">Oh I can easily be persuaded! All my life I suffer from this.</string>
    <string name="answer1_2">Sometimes I catch myself on the fact that I am yielding to advertising tricks or the pressure of my boss. No one is immune from this.</string>
    <string name="answer1_3">As I see myself, I don\'t depend on anyone at all.</string>
    <string name="answer1_4">I trust my close ones, I consult with them. But I don\'t care what others think.</string>
    <string name="reaction1_1">Well, it\'s good that you\'ve recognized this. This is not a verdict: you can learn to fight manipulators. But first let\'s check whether everything is so bad.</string>
    <string name="reaction1_2">You are absolutely right. We all are subjects to manipulation. Recognition of this is the first step to freedom.</string>
    <string name="reaction1_3">You will be surprised: this is the most common opinion. Experiments show that people who think like that are most often wrong and easily change their opinion under the pressure of society.</string>
    <string name="reaction1_4">Most people believe that they do not depend on the opinions of others. Unfortunately, your close ones can also manipulate you. And to deny that adds affects you is overconfident. Let\'s check how independent you really are.</string>
    <string name="question_2">Check your insight. What can you tell about this person from the photo,</string>
    <string name="answer2_1">In general, he is a good man - I can see it in his eyes</string>
    <string name="answer2_2">His lips are compressed and it\'s enmity on his face. Probably, you shouldn\'t trust him.</string>
    <string name="answer2_3">Well, I can\'t say anything. Just a regular, normal guy.</string>
    <string name="answer2_4">What a cold look in his eyes. Unpleasant, maybe even cruel man.</string>
    <string name="reaction2_1">Well, I\'ve got to tell you: you are not a very astute person: this man is a famous serial killer.</string>
    <string name="reaction2_2">Well, I\'ve got to tell you: you are pretty astute person: this man is a famous serial killer.</string>
    <string name="reaction2_3">Really? It\'s strange. 75% of the respondents guessed he is a serial killer. And they were right.</string>
    <string name="reaction2_4">Well, I\'ve got to tell you: you are pretty astute person: this man is a famous serial killer.</string>
    <string name="question_3">This is a educational quiz, though. So, here\'s your second chance. Now, when you know more about him, maybe you noticed some traits that you missed first,</string>
    <string name="answer3_1">This is strange. He looks like a nice person. You can\'t tell that he is a killer...</string>
    <string name="answer3_2">Well, from the other side, he does have an evil face.</string>
    <string name="answer3_3">I do not notice anything like this, I can not judge people by photo.</string>
    <string name="answer3_4">so I did not like him right away! Why should I have a second chance? disgusting man.</string>
    <string name="reaction3_1">It\'s good that you stayed with your opinion, despite the label that I\'ve hung on a person. In fact, he is not a murderer. This is the former president of Israel, Moshe Katsav. But he can not be called a good person either. He was convicted of sexual harassment and rape. And yes, for that he was in prison.</string>
    <string name="reaction3_2">Well, I\'ve just labeled a man, and you found a confirmation in the photo. He is not a murderer, I lied to you. This is the former president of Israel, Moshe Katsav. But he can not be called a good person either. He was convicted of sexual harassment and rape. And yes, for that he was in prison.</string>
    <string name="reaction3_3">You are right. In any picture you can see both the hero and the villain. In fact, he is not a murderer.</string>
    <string name="reaction3_4">To judge people from photographs is a questionable strategy. In fact, he is not a murderer. This is the former president of Israel, Moshe Katsav. But he can not be called a good person either. He was convicted of sexual harassment and rape. And yes, for that he was in prison.</string>
    <string name="question_4">Recent studies have shown that a person\'s ability to build an independent opinion directly depends on his knowledge of abstract art. What do you think about this famous painting,</string>
    <string name="answer4_1">The abstract picture acts on me as a Rorschach test- I immediately begin to see faces. What can I say, certainly worth a lot of money.</string>
    <string name="answer4_2">I think it\'s Cy Twombly, which holds in Broad Collection in Los Angeles.</string>
    <string name="answer4_3">Honestly,I don\'t understand anything in abstract art. Some kind of garbage.</string>
    <string name="answer4_4">I\'ve even seen it in San Francisco Museum of Modern Art. It\'s early Pollock, it\'s hard not to know.</string>
    <string name="reaction4_1">These are ordinary blots from the Internet, they do not cost a penny. But it\'s good that you said your own opinion and didn\'t try to pretend that you know the author.</string>
    <string name="reaction4_2">Good try, but you could not see it in any museum. These are ordinary blots from the Internet.</string>
    <string name="reaction4_3">Some kind of garbage, you are right. These are ordinary blots from the Internet.</string>
    <string name="reaction4_4">These are ordinary blots from the Internet.</string>
    <string name="question_5">Please choose one ore more answers that describe you</string>
    <string name="answer5_1">I get sick when I feel that I can not refuse.</string>
    <string name="answer5_2">When I don\'t like something, I say it without any doubt.</string>
    <string name="answer5_3">Before I express myself I apologize in advance.</string>
    <string name="answer5_4">I changed the style to please my partner.</string>
    <string name="question_6">Do you feel like you are being used by your relatives or friends</string>
    <string name="question_7">I\'ve analyzed your answers and compiled your psychological portrait. How accurate is it,</string>
    <string name="psychological_portrait">You are pretty self-critical. You have a lot of hidden opportunities that you have never used. Sometimes yours are in serious doubts whether you took the right decision or did the right thing. Limits and restrictions cause you dissatisfaction. You realized that being too openly with other people is not too wise. Some of your ambitions are quite unrealistic.</string>
    <string name="answer7_1">Amazing, it\'s right about me, every word.</string>
    <string name="answer7_2">Nonsense, not at all, I\'m completely different.</string>
    <string name="answer7_3">Well, not without errors but overall quite accurately.</string>
    <string name="answer7_4">There are some similarities, but does it say something about me?</string>
    <string name="reaction7_1">Nothing surprising. You can say that about any person.</string>
    <string name="reaction7_2">Let\'s face it: this description is at least partly applicable to any person.</string>
    <string name="reaction7_3">Let\'s face it: this description is at least partly applicable to any person.</string>
    <string name="reaction7_4">Definitely, there are some similarities. And yes, you can say that about any person. Good job!</string>
    <string name="share_your_result_with_friends">Share your result with friends</string>
    <string name="result1">You are an innocent victim. Although you think that you have your own opinion, society presses on you more than you think.</string>
    <string name="result2">You are a delicate flower. You make fragile attempts to stand on your own, but it\'s very easy to convince you to change your mind.</string>
    <string name="result3">You are tartar. You are intracable. You are very difficult to control or influence.</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="start_a_test">Start a test</string>
    <string name="next_question">Next Question</string>
    <string name="get_result">Get result</string>
    <string name="try_again">Try again</string>
    <string name="last_question">Last_question</string>
    <string name="let_s_go">LET\'S GO</string>
    <string name="submit_my_answer">SUBMIT MY ANSWER</string>


</resources>
